# full_oopip_project_sem_3

./: CMakeLists.txt  lab_1.cpp  lab_1.h  lab_3.cpp  lab_3.h  main.cpp
